--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: Google Sans;
+        font-family: 'Open Sans';
       }
       .attribution {
         font-size: 11px;
